test/files/neg/t3507.check
t3507.scala:13: error: No Manifest available for _1.b.c.type.
  mani/*[object _1.b.c]*/(c) // kaboom in manifestOfType / TreeGen.mkAttributedQualifier
                         ^
one error found
